--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
       - name: Install Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-          cache: npm
+          node-version: 22.x
+          cache: pnpm
       - name: Install npm dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: pnpm build
       - name: Run Tests
-        run: npm test
+        run: pnpm test
       - name: Test Example
         run: |
           cd example
-          npm i
-          npm run example
+          pnpm i
+          pnpm example
