--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,19 @@
 {
-    "extends": "./tsconfig.base.json",
-    "compilerOptions": {
-        "noEmit": true,
-        "incremental": true
-    }
+	"compilerOptions": {
+		"moduleResolution": "bundler",
+		"lib": ["esnext"],
+		"target": "esnext",
+
+		"esModuleInterop": true,
+		"isolatedModules": true,
+
+		"rootDir": "src/",
+
+		"strict": true,
+		"allowSyntheticDefaultImports": true,
+		"noUncheckedIndexedAccess": true,
+		"noEmit": true,
+		"forceConsistentCasingInFileNames": true,
+		"verbatimModuleSyntax": true
+	}
 }
