--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,8 @@ jobs:
         run: pnpm prettier --check .
       - name: Build
         run: pnpm build
+      - name: Publint
+        run: pnpm publint
       - name: Run Tests
         run: pnpm test
       - name: Test Example
