fix publish login

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,8 @@ jobs:
           pnpm i
           pnpm example
 
-      - run: pnpm publish --no-git-checks
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Publish
+				run: |
+					npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+					echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
+					pnpm publish --no-git-checks
