--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
 		"typescript-eslint": "^8.23.0",
 		"vitest": "^3.0.5"
 	},
-	"packageManager": "pnpm@10.8.0"
+	"packageManager": "pnpm@10.8.0",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
+	}
 }
